@@ -2,8 +2,8 @@ package ee.tuleva.onboarding.comparisons.returns.provider;
 
 import static ee.tuleva.onboarding.comparisons.returns.Returns.Return.Type.FUND;
 import static ee.tuleva.onboarding.fund.Fund.FundStatus.ACTIVE;
+import static java.util.stream.Collectors.toList;
 
-import ee.tuleva.onboarding.auth.principal.Person;
 import ee.tuleva.onboarding.comparisons.overview.AccountOverview;
 import ee.tuleva.onboarding.comparisons.overview.AccountOverviewProvider;
 import ee.tuleva.onboarding.comparisons.returns.ReturnCalculator;
@@ -12,7 +12,6 @@ import ee.tuleva.onboarding.comparisons.returns.Returns;
 import ee.tuleva.onboarding.comparisons.returns.Returns.Return;
 import ee.tuleva.onboarding.fund.Fund;
 import ee.tuleva.onboarding.fund.FundRepository;
-import java.time.Instant;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -28,12 +27,17 @@ public class FundReturnProvider implements ReturnProvider {
   private final FundRepository fundRepository;
 
   @Override
-  public Returns getReturns(Person person, Instant startTime, Integer pillar) {
+  public Returns getReturns(ReturnCalculationParameters parameters) {
+
     AccountOverview accountOverview =
-        accountOverviewProvider.getAccountOverview(person, startTime, pillar);
+        accountOverviewProvider.getAccountOverview(
+            parameters.person(), parameters.startTime(), parameters.pillar());
+
+    List<String> isins = fundIsins();
+    isins.retainAll(parameters.keys());
 
     List<Return> returns =
-        fundIsins().stream()
+        isins.stream()
             .map(
                 fundIsin -> {
                   ReturnDto aReturn =
@@ -64,6 +68,6 @@ public class FundReturnProvider implements ReturnProvider {
   }
 
   private List<String> fundIsins() {
-    return fundRepository.findAllByStatus(ACTIVE).stream().map(Fund::getIsin).toList();
+    return fundRepository.findAllByStatus(ACTIVE).stream().map(Fund::getIsin).collect(toList());
   }
 }
